SLI-1531 Update to IntelliJ Platform Gradle Plugin (2.x)